1. Улучшения Collection API [#282061]